Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-06-24 (SVN):
    * oslibs: updated msinttypes to r29 from mainstream googlecode.com
      repository.

2013-06-24 (SVN):
    * docs/COMPILE: updated tested compiler versions.

2013-06-16 (SVN):
    * in_sdl.c: use a different approach to ignore mouse events.

2013-06-10 (SVN):
    * updated config.guess and config.sub from savannah git repo.

2013-05-25 (SVN):
    * oslibs: macosx, windows: recompile libopus using the latest stable
      1.0.x branch from xiph.org git repository.
    * oslibs, windows: recompile libmpg123 from latest 1.15.4 version.

2013-05-15 (SVN):
    * oslibs: macosx, windows: recompile libogg, libopus and libopusfile
      using latest stable branches from xiph.org git repository.

2013-04-27 (SVN):
    * snd_sdl.c (S_SDL_Init): set number of samples to 4096 for sampling
      rates higher than 56, i.e. 96 kHz.

2013-04-27 (SVN):
    * pr_edict.c (PR_GetProgFilename): adjust to use FS_fgets() instead
      of fgets(), to be on the safe side just in case we run into broken
      maplist.txt files enclosed in pak files.

2013-04-27 (SVN):
    * snd_oss.c (S_OSS_Init): in case of an unlikely error, munmap the
      memory before closing the audio device.

2013-04-27 (SVN):
    * snd_dma.c (tryrates): added 96 kHz among the accepted sound rates.

2013-04-27 (SVN):
    * h2patch/build_osx.sh: fixed make calls without -f Makefile.darwin
      arguments. (they were harmless, but for correctness' sake.)

2013-04-27 (SVN):
    * hexenworld, cl_parse.c (CL_CheckOrDownloadFile): use FS_FileExists
    * hexenworld, sv_ccmds.c (SV_Map_f): use FS_FileExists

2013-04-10 (SVN):
    * r_shared.h (MAXWIDTH): added a caution note that 12.20 fixed
      point math used in R_ScanEdges() overflows at width 2048, as
      noticed by Kevin Shanahan.

2013-04-10 (SVN):
    * oslibs: recompiled libogg-1.3.0 with patch from xiph.org svn rev.
      18758 applied.

2013-04-06 (SVN):